# labPAOO

./: CMakeLists.txt  main.cpp
Jucator/: CMakeLists.txt  jucator.cpp  jucator.hpp
src/: CMakeLists.txt  jucator.hpp  main  main.cpp
src/Echipa/: CMakeLists.txt  Echipa.hpp
src/Istoric/: CMakeLists.txt  Istoric.cpp  Istoric.hpp
src/Jucator/: CMakeLists.txt  JucatorFotbal.cpp  JucatorFotbal.hpp
src/Portar/: CMakeLists.txt  Portar.cpp  Portar.hpp
